--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".EscolaVisionActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.TestEscolaVision">
 
