--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,14 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Inicio"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat"
-            >
-
-
+            android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
-
         </activity>
     </application>
 
