--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ScrollView"
+            android:exported="false" />
         <activity
             android:name=".Inicio"
             android:exported="true"
@@ -26,6 +28,7 @@
         <activity android:name=".MainActivity">
 
         </activity>
+
     </application>
 
 </manifest>
