--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TestEscolaVision"
         tools:targetApi="31">
         <activity
+            android:name=".Resultados"
+            android:exported="false" />
+        <activity
             android:name=".ScrollView"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="false"
@@ -27,11 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
 
         <meta-data
             android:name="@android.support.PARENT_ACTIVITY"
-            android:value=".ScrollActivity"></meta-data>
+            android:value=".ScrollActivity" />
     </application>
 
 </manifest>
